--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ ignoreFiles=["\\.Rmd$","\\.Rmarkdown$","_files$","_cache$"]
 
 [params]
   # Shown in the home page
-  subtitle = "Plant Science and Precision Agriculture"
-  brand = "My Site"
+  subtitle = "Content I like"
+  brand = "Perach"
   googleAnalytics = "Your Google Analytics tracking ID"
   disqus = "Your Disqus shortname"
   # CSS name for highlight.js
